lab-import-export: Bonus extra agregado

--- a/module-1/lab-import-export/your-code/main.ipynb
+++ b/module-1/lab-import-export/your-code/main.ipynb
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +898,7 @@
        "4                 0.50      O  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -910,6 +910,172 @@
     "fert_url = 'https://archive.ics.uci.edu/ml/machine-learning-databases/00244/fertility_Diagnosis.txt'\n",
     "fertility = pd.read_csv(fert_url, names = cols_fert)\n",
     "fertility.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Bonus Challenge 2 - Haz la tabla legible\n",
+    "\n",
+    "Intercambia los valores del Dataframe por su significado según la descripción de los datos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>season</th>\n",
+       "      <th>age</th>\n",
+       "      <th>childish diseases</th>\n",
+       "      <th>accidents or traumas</th>\n",
+       "      <th>surgical intervation</th>\n",
+       "      <th>hight fevers</th>\n",
+       "      <th>alcohol consumption</th>\n",
+       "      <th>smoking habits</th>\n",
+       "      <th>hours spent sitting</th>\n",
+       "      <th>output</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>spring</td>\n",
+       "      <td>30</td>\n",
+       "      <td>Sí</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sí</td>\n",
+       "      <td>Rara vez</td>\n",
+       "      <td>Ocasionalmente</td>\n",
+       "      <td>21 horas y 7 minutos</td>\n",
+       "      <td>Normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>spring</td>\n",
+       "      <td>34</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sí</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sí</td>\n",
+       "      <td>Rara vez</td>\n",
+       "      <td>A diario</td>\n",
+       "      <td>7 horas y 26 minutos</td>\n",
+       "      <td>Alterado</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>spring</td>\n",
+       "      <td>27</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sí</td>\n",
+       "      <td>Sí</td>\n",
+       "      <td>Sí</td>\n",
+       "      <td>Nunca</td>\n",
+       "      <td>Nunca</td>\n",
+       "      <td>12 horas y 0 minutos</td>\n",
+       "      <td>Normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>spring</td>\n",
+       "      <td>31</td>\n",
+       "      <td>Sí</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sí</td>\n",
+       "      <td>Nunca</td>\n",
+       "      <td>Nunca</td>\n",
+       "      <td>9 horas y 7 minutos</td>\n",
+       "      <td>Normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>spring</td>\n",
+       "      <td>30</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sí</td>\n",
+       "      <td>Sí</td>\n",
+       "      <td>Rara vez</td>\n",
+       "      <td>Nunca</td>\n",
+       "      <td>12 horas y 0 minutos</td>\n",
+       "      <td>Alterado</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   season  age childish diseases accidents or traumas surgical intervation  \\\n",
+       "0  spring   30                Sí                   No                   No   \n",
+       "1  spring   34                No                   Sí                   No   \n",
+       "2  spring   27                No                   Sí                   Sí   \n",
+       "3  spring   31                Sí                   No                   No   \n",
+       "4  spring   30                No                   No                   Sí   \n",
+       "\n",
+       "  hight fevers alcohol consumption  smoking habits   hours spent sitting  \\\n",
+       "0           Sí            Rara vez  Ocasionalmente  21 horas y 7 minutos   \n",
+       "1           Sí            Rara vez        A diario  7 horas y 26 minutos   \n",
+       "2           Sí               Nunca           Nunca  12 horas y 0 minutos   \n",
+       "3           Sí               Nunca           Nunca   9 horas y 7 minutos   \n",
+       "4           Sí            Rara vez           Nunca  12 horas y 0 minutos   \n",
+       "\n",
+       "     output  \n",
+       "0    Normal  \n",
+       "1  Alterado  \n",
+       "2    Normal  \n",
+       "3    Normal  \n",
+       "4  Alterado  "
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fert = fertility\n",
+    "dic = {\"season\": {-1 : \"winter\", -0.33 : \"spring\", 0.33 : \"summer\", 1 : \"fall\"},\n",
+    "       \"childish diseases\": {0 : \"Sí\", 1: \"No\"},\n",
+    "       \"accidents or traumas\": {0 : \"Sí\", 1: \"No\"},\n",
+    "       \"surgical intervation\": {0 : \"Sí\", 1: \"No\"},\n",
+    "       \"hight fevers\": {0 : \"Sí\", 1: \"No\"},\n",
+    "       \"childish diseases\": {0 : \"Sí\", 1: \"No\"},\n",
+    "       \"alcohol consumption\": {0: \"Varias veces al días\", 0.2: \"Una vez al día\", 0.4: \"Varias veces por semana\",\\\n",
+    "        0.6: \"Una vez por semana\", 0.8: \"Rara vez\", 1: \"Nunca\"},\n",
+    "       \"smoking habits\": {-1 : \"Nunca\", 0: \"Ocasionalmente\", 1: \"A diario\"},\n",
+    "       \"output\": {\"N\": \"Normal\", \"O\": \"Alterado\"},\n",
+    "      }\n",
+    "\n",
+    "f= fert.replace(dic)\n",
+    "f[\"age\"] = f[\"age\"].apply(lambda x: int(18*x +18))\n",
+    "f[\"hours spent sitting\"] = f[\"hours spent sitting\"].apply(lambda x: \"{} horas y {} minutos\".format(int(24*x), int((24*x-int(24*x))*60) ) )\n",
+    "\n",
+    "f.head()"
    ]
   }
  ],
