--- a/module-1/lab-import-export/your-code/lab-import-export.ipynb
+++ b/module-1/lab-import-export/your-code/lab-import-export.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -10274,7 +10274,7 @@
        "  'geolocation': {'type': 'Point', 'coordinates': [34.76667, 47.85]}}]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10294,7 +10294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -10435,7 +10435,7 @@
        "4    Valid           L6 -33.16667  -64.95000  1902-01-01T00:00:00.000  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10457,7 +10457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -10488,7 +10488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10510,13 +10510,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Run this code:\n",
     "\n",
-    "cols = ['time', 'rad_flow', 'fpv_close', 'fpv_open', 'high', 'bypass', 'bpv_close', 'bpv_open', 'class']\n",
+    "cols = ['time', 'rad_flow', 'fpv_close', 'fpv_open', 'high', 'bypass', 'bpv_close', 'bpv_open', 'class', ' ']\n",
     "tst_url = 'https://archive.ics.uci.edu/ml/machine-learning-databases/statlog/shuttle/shuttle.tst'"
    ]
   },
@@ -10528,7 +10528,8 @@
    "source": [
     "# Your code here:\n",
     "\n",
-    "shuttle = "
+    "shuttle = pd.read_csv(tst_url,sep= ' ')\n",
+    "shuttle.columns = cols"
    ]
   },
   {
@@ -10542,10 +10543,134 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>rad_flow</th>\n",
+       "      <th>fpv_close</th>\n",
+       "      <th>fpv_open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>bypass</th>\n",
+       "      <th>bpv_close</th>\n",
+       "      <th>bpv_open</th>\n",
+       "      <th>class</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>56</td>\n",
+       "      <td>0</td>\n",
+       "      <td>96</td>\n",
+       "      <td>0</td>\n",
+       "      <td>52</td>\n",
+       "      <td>-4</td>\n",
+       "      <td>40</td>\n",
+       "      <td>44</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>50</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>89</td>\n",
+       "      <td>-7</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0</td>\n",
+       "      <td>39</td>\n",
+       "      <td>40</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>53</td>\n",
+       "      <td>9</td>\n",
+       "      <td>79</td>\n",
+       "      <td>0</td>\n",
+       "      <td>42</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>25</td>\n",
+       "      <td>37</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>55</td>\n",
+       "      <td>2</td>\n",
+       "      <td>82</td>\n",
+       "      <td>0</td>\n",
+       "      <td>54</td>\n",
+       "      <td>-6</td>\n",
+       "      <td>26</td>\n",
+       "      <td>28</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>41</td>\n",
+       "      <td>0</td>\n",
+       "      <td>84</td>\n",
+       "      <td>3</td>\n",
+       "      <td>38</td>\n",
+       "      <td>-4</td>\n",
+       "      <td>43</td>\n",
+       "      <td>45</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   time  rad_flow  fpv_close  fpv_open  high  bypass  bpv_close  bpv_open  \\\n",
+       "0    56         0         96         0    52      -4         40        44   \n",
+       "1    50        -1         89        -7    50       0         39        40   \n",
+       "2    53         9         79         0    42      -2         25        37   \n",
+       "3    55         2         82         0    54      -6         26        28   \n",
+       "4    41         0         84         3    38      -4         43        45   \n",
+       "\n",
+       "   class     \n",
+       "0      4  4  \n",
+       "1      2  1  \n",
+       "2     12  4  \n",
+       "3      2  1  \n",
+       "4      2  1  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "shuttle.head()\n"
    ]
   },
   {
@@ -10562,6 +10687,7 @@
    "outputs": [],
    "source": [
     "# Your code here:\n",
+    "shuttle.to_csv (('./shuttle.csv'), index=False)\n",
     "\n"
    ]
   },
@@ -10578,12 +10704,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "x = pd.read_excel('./astronauts.xls')\n"
    ]
   },
   {
@@ -10595,11 +10721,211 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Group</th>\n",
+       "      <th>Status</th>\n",
+       "      <th>Birth Date</th>\n",
+       "      <th>Birth Place</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Alma Mater</th>\n",
+       "      <th>Undergraduate Major</th>\n",
+       "      <th>Graduate Major</th>\n",
+       "      <th>Military Rank</th>\n",
+       "      <th>Military Branch</th>\n",
+       "      <th>Space Flights</th>\n",
+       "      <th>Space Flight (hr)</th>\n",
+       "      <th>Space Walks</th>\n",
+       "      <th>Space Walks (hr)</th>\n",
+       "      <th>Missions</th>\n",
+       "      <th>Death Date</th>\n",
+       "      <th>Death Mission</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Joseph M. Acaba</td>\n",
+       "      <td>2004.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>Active</td>\n",
+       "      <td>1967-05-17</td>\n",
+       "      <td>Inglewood, CA</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>University of California-Santa Barbara; Univer...</td>\n",
+       "      <td>Geology</td>\n",
+       "      <td>Geology</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3307</td>\n",
+       "      <td>2</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>STS-119 (Discovery), ISS-31/32 (Soyuz)</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Loren W. Acton</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Retired</td>\n",
+       "      <td>1936-03-07</td>\n",
+       "      <td>Lewiston, MT</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Montana State University; University of Colorado</td>\n",
+       "      <td>Engineering Physics</td>\n",
+       "      <td>Solar Physics</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>190</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>STS 51-F (Challenger)</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>James C. Adamson</td>\n",
+       "      <td>1984.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>Retired</td>\n",
+       "      <td>1946-03-03</td>\n",
+       "      <td>Warsaw, NY</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>US Military Academy; Princeton University</td>\n",
+       "      <td>Engineering</td>\n",
+       "      <td>Aerospace Engineering</td>\n",
+       "      <td>Colonel</td>\n",
+       "      <td>US Army (Retired)</td>\n",
+       "      <td>2</td>\n",
+       "      <td>334</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>STS-28 (Columbia), STS-43 (Atlantis)</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Thomas D. Akers</td>\n",
+       "      <td>1987.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>Retired</td>\n",
+       "      <td>1951-05-20</td>\n",
+       "      <td>St. Louis, MO</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>University of Missouri-Rolla</td>\n",
+       "      <td>Applied Mathematics</td>\n",
+       "      <td>Applied Mathematics</td>\n",
+       "      <td>Colonel</td>\n",
+       "      <td>US Air Force (Retired)</td>\n",
+       "      <td>4</td>\n",
+       "      <td>814</td>\n",
+       "      <td>4</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>STS-41 (Discovery), STS-49 (Endeavor), STS-61 ...</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Buzz Aldrin</td>\n",
+       "      <td>1963.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Retired</td>\n",
+       "      <td>1930-01-20</td>\n",
+       "      <td>Montclair, NJ</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>US Military Academy; MIT</td>\n",
+       "      <td>Mechanical Engineering</td>\n",
+       "      <td>Astronautics</td>\n",
+       "      <td>Colonel</td>\n",
+       "      <td>US Air Force (Retired)</td>\n",
+       "      <td>2</td>\n",
+       "      <td>289</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>Gemini 12, Apollo 11</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Name    Year  Group   Status Birth Date    Birth Place Gender  \\\n",
+       "0   Joseph M. Acaba  2004.0   19.0   Active 1967-05-17  Inglewood, CA   Male   \n",
+       "1    Loren W. Acton     NaN    NaN  Retired 1936-03-07   Lewiston, MT   Male   \n",
+       "2  James C. Adamson  1984.0   10.0  Retired 1946-03-03     Warsaw, NY   Male   \n",
+       "3   Thomas D. Akers  1987.0   12.0  Retired 1951-05-20  St. Louis, MO   Male   \n",
+       "4       Buzz Aldrin  1963.0    3.0  Retired 1930-01-20  Montclair, NJ   Male   \n",
+       "\n",
+       "                                          Alma Mater     Undergraduate Major  \\\n",
+       "0  University of California-Santa Barbara; Univer...                 Geology   \n",
+       "1   Montana State University; University of Colorado     Engineering Physics   \n",
+       "2          US Military Academy; Princeton University             Engineering   \n",
+       "3                       University of Missouri-Rolla     Applied Mathematics   \n",
+       "4                           US Military Academy; MIT  Mechanical Engineering   \n",
+       "\n",
+       "          Graduate Major Military Rank         Military Branch  Space Flights  \\\n",
+       "0                Geology           NaN                     NaN              2   \n",
+       "1          Solar Physics           NaN                     NaN              1   \n",
+       "2  Aerospace Engineering       Colonel       US Army (Retired)              2   \n",
+       "3    Applied Mathematics       Colonel  US Air Force (Retired)              4   \n",
+       "4           Astronautics       Colonel  US Air Force (Retired)              2   \n",
+       "\n",
+       "   Space Flight (hr)  Space Walks  Space Walks (hr)  \\\n",
+       "0               3307            2              13.0   \n",
+       "1                190            0               0.0   \n",
+       "2                334            0               0.0   \n",
+       "3                814            4              29.0   \n",
+       "4                289            2               8.0   \n",
+       "\n",
+       "                                            Missions Death Date Death Mission  \n",
+       "0             STS-119 (Discovery), ISS-31/32 (Soyuz)        NaT           NaN  \n",
+       "1                              STS 51-F (Challenger)        NaT           NaN  \n",
+       "2               STS-28 (Columbia), STS-43 (Atlantis)        NaT           NaN  \n",
+       "3  STS-41 (Discovery), STS-49 (Endeavor), STS-61 ...        NaT           NaN  \n",
+       "4                               Gemini 12, Apollo 11        NaT           NaN  "
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
+    "x.head()\n",
     "\n"
    ]
   },
@@ -10612,12 +10938,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Physics\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "print(x[\"Undergraduate Major\"].value_counts().idxmax())\n"
    ]
   },
   {
@@ -10629,12 +10963,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "x.to_csv(('./astronaut.csv'),index= False)\n"
    ]
   },
   {
@@ -10648,13 +10983,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'columns'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-45-dcea0426d71e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mcols\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'Season'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Age'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Childish diseases'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Accident'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Surgical intervention'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'High fevers'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Alcohol consumption'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Smoking habits'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Hours sitting'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Output'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mfertility\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m'../fertility_Diagnosis.txt'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mfertility\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcols\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mr_fertility\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfertility\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mr_fertility\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'columns'"
+     ]
+    }
+   ],
    "source": [
     "# Your code here:\n",
+    "cols = ['Season', 'Age', 'Childish diseases', 'Accident', 'Surgical intervention', 'High fevers', 'Alcohol consumption', 'Smoking habits', 'Hours sitting', 'Output'] \n",
+    "fertility = ('../fertility_Diagnosis.txt')\n",
+    "fertility.columns = cols\n",
+    "r_fertility = pd.read_csv(fertility)\n",
+    "r_fertility.head()\n",
+    "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
