Cambios no guardados

--- a/module-1/lab-import-export/your-code/main.ipynb
+++ b/module-1/lab-import-export/your-code/main.ipynb
@@ -569,16 +569,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Season', 'Age', 'Childish', 'Childish diseases', 'Accident',\n",
+       "       'Surgical intervention', 'High fevers l/y',\n",
+       "       'Freq. of alcohol consumption ', 'Smoking habit', 'Number of hours'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
     "\n",
     "fertility =  pd.read_csv(\"fertility_Diagnosis.txt\")\n",
     "a = (\"Season\",\"Age\",\"Childish\",\"Childish diseases\",\"Accident\",\"Surgical intervention\",\"High fevers l/y\", \"Freq. of alcohol consumption \",\"Smoking habit\",\"Number of hours\")\n",
     "\n",
-    "fertility.columns = a\n"
+    "fertility.columns = a\n",
+    "\n",
+    "\n"
    ]
   },
   {
