up to 6th section

--- a/module-1/lab-data_cleaning/your-code/main.ipynb
+++ b/module-1/lab-data_cleaning/your-code/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,10 +25,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import getpass\n",
+    "import pymysql\n",
+    "from sqlalchemy import create_engine"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -39,10 +43,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connected to DB!\n"
+     ]
+    }
+   ],
+   "source": [
+    "mysql_domain = \"relational.fit.cvut.cz\"\n",
+    "mysql_user = \"guest\"\n",
+    "mysql_password = \"relational\"\n",
+    "mysql_db = \"stats\"\n",
+    "\n",
+    "dbdata = [mysql_user, mysql_password, mysql_domain, mysql_db]\n",
+    "connection_url = 'mysql+pymysql://{}:{}@{}/{}'.format(*dbdata)\n",
+    "engine = create_engine(connection_url)\n",
+    "print(\"Connected to DB!\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -56,7 +78,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "sqlquery = \"\"\"\n",
+    "SELECT * FROM users;\n",
+    "\"\"\"\n",
+    "\n",
+    "data = pd.read_sql_query(sqlquery, engine)\n",
+    "print(data.shape)\n",
+    "data.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -70,7 +102,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = data.rename(columns= {'Id':'userId'}, inplace=True)\n",
+    "display()"
+   ]
   },
   {
    "cell_type": "markdown",
