Lab finished - bonnus

--- a/module-1/lab-data_cleaning/your-code/main.ipynb
+++ b/module-1/lab-data_cleaning/your-code/main.ipynb
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -934,11 +934,32 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "userId            int64\n",
+       "Reputation        int64\n",
+       "Views             int64\n",
+       "UpVotes           int64\n",
+       "DownVotes         int64\n",
+       "postId            int64\n",
+       "Score             int64\n",
+       "ViewCount       float64\n",
+       "CommentCount      int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "d_merged = d_users.merge(d_posts)\n",
-    "display(d_merged.head())"
+    "display(d_merged.head())\n",
+    "d_merged.shape\n",
+    "d_merged.dtypes"
    ]
   },
   {
@@ -950,10 +971,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "userId              0\n",
+       "Reputation          0\n",
+       "Views               0\n",
+       "UpVotes             0\n",
+       "DownVotes           0\n",
+       "postId              0\n",
+       "Score               0\n",
+       "ViewCount       48396\n",
+       "CommentCount        0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "missing_values = d_merged.isnull().sum()\n",
+    "missing_values"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -965,10 +1009,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>userId</th>\n",
+       "      <th>Reputation</th>\n",
+       "      <th>Views</th>\n",
+       "      <th>UpVotes</th>\n",
+       "      <th>DownVotes</th>\n",
+       "      <th>postId</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5007</td>\n",
+       "      <td>1920</td>\n",
+       "      <td>2175</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5007</td>\n",
+       "      <td>1920</td>\n",
+       "      <td>8576</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5007</td>\n",
+       "      <td>1920</td>\n",
+       "      <td>8578</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5007</td>\n",
+       "      <td>1920</td>\n",
+       "      <td>8981</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5007</td>\n",
+       "      <td>1920</td>\n",
+       "      <td>8982</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   userId  Reputation  Views  UpVotes  DownVotes  postId\n",
+       "0      -1           1      0     5007       1920    2175\n",
+       "1      -1           1      0     5007       1920    8576\n",
+       "2      -1           1      0     5007       1920    8578\n",
+       "3      -1           1      0     5007       1920    8981\n",
+       "4      -1           1      0     5007       1920    8982"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "data_clean = d_merged.drop([\"ViewCount\"], axis = 1)\n",
+    "\n",
+    "# El merge realizado previamente ha mantenido los datos correspondientes a Users y Posts coincidentes. Es decir,\n",
+    "# mediante un inner join se han juntado los datos que tienen relación entre las tablas. Otorgando especial interés a:\n",
+    "# ~ userId\n",
+    "# ~ Reputation\n",
+    "# ~ Views\n",
+    "# ~ Votes (Up and Down)\n",
+    "\n",
+    "data_clean = data_clean.drop([\"Score\", \"CommentCount\"], axis = 1)\n",
+    "\n",
+    "\n",
+    "# Esta relación parte de la hipótesis de que el análisis que se pretende realizar sobre el conjunto de datos busca sacar\n",
+    "# conclusiones con respecto a todos los usuarios que han publicado un post. Este análisis puede resultar interesante para\n",
+    "# la justificación de una acción estratégica en torno a las campañas o gestión de los clientes actuales y su \n",
+    "# comportamiento (y valoración desde nuestra plataforma).\n",
+    "\n",
+    "\n",
+    "display(data_clean.head())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -979,10 +1135,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "userId        int64\n",
+       "Reputation    int64\n",
+       "Views         int64\n",
+       "UpVotes       int64\n",
+       "DownVotes     int64\n",
+       "postId        int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_clean.dtypes"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -990,6 +1165,67 @@
    "source": [
     "#### Bonus: Identify extreme values in your merged dataframe as you have learned in class, create a dataframe called outliers with the same columns as our data set and calculate the bounds. The values of the outliers dataframe will be the values of the merged_df that fall outside that bounds. You will need to save your outliers dataframe to a csv file on your-code folder."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'columns'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-101-21158f49d23a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0moutliers\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcol\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mstats\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0miqr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstats\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mat\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcol\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'IQR'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mcutoff\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0miqr\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m1.5\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'columns'"
+     ]
+    }
+   ],
+   "source": [
+    "outliers = pd.DataFrame(columns=data.columns)\n",
+    "\n",
+    "for col in stats.index:\n",
+    "    iqr = stats.at[col,'IQR']\n",
+    "    cutoff = iqr * 1.5\n",
+    "    lower = stats.at[col,'25%'] - cutoff\n",
+    "    upper = stats.at[col,'75%'] + cutoff\n",
+    "    results = data_clean[(data_clean[col] < lower) | \n",
+    "                   (data_clean[col] > upper)].copy()\n",
+    "    results['Outlier'] = col\n",
+    "    outliers = outliers.append(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outliers['Outlier'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
