--- a/module-1/lab-data_cleaning/your-code/main.ipynb
+++ b/module-1/lab-data_cleaning/your-code/main.ipynb
@@ -1168,23 +1168,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'columns'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-101-21158f49d23a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0moutliers\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcol\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mstats\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0miqr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstats\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mat\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcol\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'IQR'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mcutoff\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0miqr\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m1.5\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'columns'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "      <th>IQR</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>userId</th>\n",
+       "      <td>90584.0</td>\n",
+       "      <td>16546.764727</td>\n",
+       "      <td>15273.367108</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>3437.00</td>\n",
+       "      <td>11032.0</td>\n",
+       "      <td>27700.00</td>\n",
+       "      <td>55746.0</td>\n",
+       "      <td>24263.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Reputation</th>\n",
+       "      <td>90584.0</td>\n",
+       "      <td>6282.395412</td>\n",
+       "      <td>15102.268670</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>60.00</td>\n",
+       "      <td>396.0</td>\n",
+       "      <td>4460.00</td>\n",
+       "      <td>87393.0</td>\n",
+       "      <td>4400.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Views</th>\n",
+       "      <td>90584.0</td>\n",
+       "      <td>1034.245176</td>\n",
+       "      <td>2880.074012</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>514.25</td>\n",
+       "      <td>20932.0</td>\n",
+       "      <td>509.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>UpVotes</th>\n",
+       "      <td>90584.0</td>\n",
+       "      <td>734.315718</td>\n",
+       "      <td>2050.869327</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>283.00</td>\n",
+       "      <td>11442.0</td>\n",
+       "      <td>282.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DownVotes</th>\n",
+       "      <td>90584.0</td>\n",
+       "      <td>33.273249</td>\n",
+       "      <td>134.936435</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.00</td>\n",
+       "      <td>1920.0</td>\n",
+       "      <td>8.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>postId</th>\n",
+       "      <td>90584.0</td>\n",
+       "      <td>56539.080522</td>\n",
+       "      <td>33840.307529</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>26051.75</td>\n",
+       "      <td>57225.5</td>\n",
+       "      <td>86145.25</td>\n",
+       "      <td>115378.0</td>\n",
+       "      <td>60093.50</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              count          mean           std  min       25%      50%  \\\n",
+       "userId      90584.0  16546.764727  15273.367108 -1.0   3437.00  11032.0   \n",
+       "Reputation  90584.0   6282.395412  15102.268670  1.0     60.00    396.0   \n",
+       "Views       90584.0   1034.245176   2880.074012  0.0      5.00     45.0   \n",
+       "UpVotes     90584.0    734.315718   2050.869327  0.0      1.00     22.0   \n",
+       "DownVotes   90584.0     33.273249    134.936435  0.0      0.00      0.0   \n",
+       "postId      90584.0  56539.080522  33840.307529  1.0  26051.75  57225.5   \n",
+       "\n",
+       "                 75%       max       IQR  \n",
+       "userId      27700.00   55746.0  24263.00  \n",
+       "Reputation   4460.00   87393.0   4400.00  \n",
+       "Views         514.25   20932.0    509.25  \n",
+       "UpVotes       283.00   11442.0    282.00  \n",
+       "DownVotes       8.00    1920.0      8.00  \n",
+       "postId      86145.25  115378.0  60093.50  "
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "outliers = pd.DataFrame(columns=data.columns)\n",
+    "stats = data_clean.describe().transpose()\n",
+    "stats['IQR'] = stats['75%'] - stats['25%']\n",
+    "stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outliers = pd.DataFrame(columns=data_clean.columns)\n",
     "\n",
     "for col in stats.index:\n",
     "    iqr = stats.at[col,'IQR']\n",
@@ -1199,26 +1330,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DownVotes     17424\n",
+       "UpVotes       14097\n",
+       "Reputation    13344\n",
+       "Views         13255\n",
+       "Name: Outlier, dtype: int64"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "outliers['Outlier'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "outliers.to_csv('outliers.csv')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data_clean.to_csv(\"users_posts.csv\")"
+   ]
   },
   {
    "cell_type": "code",
