--- a/module-1/lab-data_cleaning/your-code/main.ipynb
+++ b/module-1/lab-data_cleaning/your-code/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,18 +42,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Connected to DB!\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mysql_domain = \"relational.fit.cvut.cz\"\n",
     "mysql_user = \"guest\"\n",
@@ -77,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +258,7 @@
        "4          5      54503  35.0                                None  "
       ]
      },
-     "execution_count": 182,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +523,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -911,7 +902,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -932,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -950,30 +941,20 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
-    "merged1['ViewCount'].fillna(0, inplace=True)\n",
+    "data_clean = merged1['ViewCount'].fillna(0, inplace=True)\n",
     "merged1.isna().sum()\n",
     "\n",
-    "#Me parece que el sistema de viewcount tiene un error ya que existen NAs con valoraciones.\n",
-    "#Bajo mi punto de vista, poner un 0 no es buena idea ya que significaría que sin tener visitas recibe valoraciones. \n",
-    "#Eliminar los datos tampoco porque pierdo la mitad de la data y eliminar la columna puede eliminar información valiosa.\n",
-    "#Me decanto por fijar error, para poder descartarlos en caso de que nice la información numérica y separar los datos. \n",
-    "#Habría que profundizar en el porqué de los NA. \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
+    "#Me parece que el sistema de viewcount tiene un error ya que existen NAs con valoraciones. \n",
+    "#Eliminar los datos tampoco porque pierdo la mitad de los datos y si elimino la columna, puedo eliminar información valiosa.\n",
+    "#Habría que profundizar en el porqué de los NA. La idea de poner un 0, no me termina de convencer, ya que me lleva a pensar que \n",
+    "#hay usuarios que votan sus propios comentarios por lo que no se reconocen como visitas, pero encuentran valoraciones. \n"
    ]
   },
   {
@@ -985,29 +966,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "userId          int64\n",
-      "Reputation      int64\n",
-      "Views           int64\n",
-      "UpVotes         int64\n",
-      "DownVotes       int64\n",
-      "postId          int64\n",
-      "Score           int64\n",
-      "ViewCount       int64\n",
-      "CommentCount    int64\n",
-      "dtype: object\n"
-     ]
+     "data": {
+      "text/plain": [
+       "dtype('int64')"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "merged1[\"ViewCount\"]=merged1[\"ViewCount\"].astype(int)\n",
-    "print(merged1.dtypes)"
+    "data_clean1=merged1[\"ViewCount\"].astype(int)\n",
+    "\n",
+    "data_clean1.dtype"
    ]
   },
   {
@@ -1016,6 +992,66 @@
    "source": [
     "#### Bonus: Identify extreme values in your merged dataframe as you have learned in class, create a dataframe called outliers with the same columns as our data set and calculate the bounds. The values of the outliers dataframe will be the values of the merged_df that fall outside that bounds. You will need to save your outliers dataframe to a csv file on your-code folder."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count     90584.000000\n",
+       "mean        259.253400\n",
+       "std        1632.261405\n",
+       "min           0.000000\n",
+       "25%           0.000000\n",
+       "50%           0.000000\n",
+       "75%         111.000000\n",
+       "max      175495.000000\n",
+       "IQR         111.000000\n",
+       "Name: ViewCount, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "stats = data_clean1.describe().transpose()\n",
+    "\n",
+    "stats['IQR'] = stats['75%'] - stats['25%']\n",
+    "\n",
+    "display(stats)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outliers = pd.DataFrame(columns=data_clean1.columns)\n",
+    "\n",
+    "for col in stats.index:\n",
+    "    iqr = stats.at[col,'IQR']\n",
+    "    cutoff = iqr * 1.5\n",
+    "    lower = stats.at[col,'25%'] - cutoff\n",
+    "    upper = stats.at[col,'75%'] + cutoff\n",
+    "    results = data_clean[(data_clean1[col] < lower) | \n",
+    "                   (data_clean1[col] > upper)].copy()\n",
+    "    results['Outlier'] = col\n",
+    "    outliers = outliers.append(results)\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
